--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         <div class="widgets__item">
           <h3 class="widgets__item__heading">Recent posts</h3>
           <ul class="recent-posts">
+            <li class="recent-posts__item"><a href="/Trunk-Correlated-Practices/">Trunk-Correlated-Practices</a></li>
             <li class="recent-posts__item"><a href="/HedgeServ-Innovations/">HedgeServ innovations</a></li>
             <li class="recent-posts__item"><a href="/Airline-Case-Study/">Airline Case Study</a></li>
             <li class="recent-posts__item"><a href="/BofA-Platform-Case-Study/">Bank of America FX Platform Case Study</a></li>
@@ -131,6 +132,7 @@
             <li class="tag-list-item"><a class="tag-list-link" href="/tags/Legacy-Rejuvenation/">Legacy Rejuvenation</a><span class="tag-list-count">1</span></li>
             <li class="tag-list-item"><a class="tag-list-link" href="/tags/Service-Virtualization/">Service Virtualization</a><span class="tag-list-count">1</span></li>
             <li class="tag-list-item"><a class="tag-list-link" href="/tags/Speedy-Builds/">Speedy Builds</a><span class="tag-list-count">1</span></li>
+            <li class="tag-list-item"><a class="tag-list-link" href="/tags/Trunk-Based-Development/">Trunk Based Development</a><span class="tag-list-count">1</span></li>
             <li class="tag-list-item"><a class="tag-list-link" href="/tags/Trunk-Based-Development/">Trunk-Based Development</a><span class="tag-list-count">3</span></li>
           </ul>
         </div>
