--- a/Airline-Case-Study/index.html
+++ b/Airline-Case-Study/index.html
@@ -128,6 +128,11 @@
             <div class="related-posts__item__overlay"></div><span class="related-posts__item__title">Bank of America FX Platform Case Study</span></a>
         </div>
         <div class="related-posts__item__wrapper">
+          <a href="/Trunk-Correlated-Practices/" class="related-posts__item">
+            <div style="background-image: url('/images/default.jpg')" class="related-posts__item__background"></div>
+            <div class="related-posts__item__overlay"></div><span class="related-posts__item__title">Trunk-Correlated-Practices</span></a>
+        </div>
+        <div class="related-posts__item__wrapper">
           <a href="/HedgeServ-Innovations/" class="related-posts__item">
             <div style="background-image: url('/images/default.jpg')" class="related-posts__item__background"></div>
             <div class="related-posts__item__overlay"></div><span class="related-posts__item__title">HedgeServ innovations</span></a>
@@ -161,8 +166,7 @@
             <li class="tag-list-item"><a class="tag-list-link" href="/tags/Legacy-Rejuvenation/">Legacy Rejuvenation</a><span class="tag-list-count">1</span></li>
             <li class="tag-list-item"><a class="tag-list-link" href="/tags/Service-Virtualization/">Service Virtualization</a><span class="tag-list-count">1</span></li>
             <li class="tag-list-item"><a class="tag-list-link" href="/tags/Speedy-Builds/">Speedy Builds</a><span class="tag-list-count">1</span></li>
-            <li class="tag-list-item"><a class="tag-list-link" href="/tags/Trunk-Based-Development/">Trunk Based Development</a><span class="tag-list-count">1</span></li>
-            <li class="tag-list-item"><a class="tag-list-link" href="/tags/Trunk-Based-Development/">Trunk-Based Development</a><span class="tag-list-count">3</span></li>
+            <li class="tag-list-item"><a class="tag-list-link" href="/tags/Trunk-Based-Development/">Trunk-Based Development</a><span class="tag-list-count">4</span></li>
           </ul>
         </div>
       </div>
