--- a/BofA-Platform-Case-Study/index.html
+++ b/BofA-Platform-Case-Study/index.html
@@ -132,9 +132,9 @@
           <div class="related-posts__item__overlay"></div><span class="related-posts__item__title">Airline Case Study</span></a>
       </div>
       <div class="related-posts__item__wrapper">
-        <a href="/Trunk-Correlated-Practices/" class="related-posts__item">
+        <a href="/Trunk-Correlated-Practices-Diagram/" class="related-posts__item">
           <div style="background-image: url('/images/default.jpg')" class="related-posts__item__background"></div>
-          <div class="related-posts__item__overlay"></div><span class="related-posts__item__title">Trunk-Correlated-Practices</span></a>
+          <div class="related-posts__item__overlay"></div><span class="related-posts__item__title">Trunk Correlated Practices Diagram</span></a>
       </div>
       <div class="related-posts__item__wrapper">
         <a href="/HedgeServ-Innovations/" class="related-posts__item">
@@ -152,7 +152,7 @@
         <div class="widgets__item">
           <h3 class="widgets__item__heading">Recent posts</h3>
           <ul class="recent-posts">
-            <li class="recent-posts__item"><a href="/Trunk-Correlated-Practices/">Trunk-Correlated-Practices</a></li>
+            <li class="recent-posts__item"><a href="/Trunk-Correlated-Practices-Diagram/">Trunk Correlated Practices Diagram</a></li>
             <li class="recent-posts__item"><a href="/HedgeServ-Innovations/">HedgeServ innovations</a></li>
             <li class="recent-posts__item"><a href="/Airline-Case-Study/">Airline Case Study</a></li>
             <li class="recent-posts__item"><a href="/BofA-Platform-Case-Study/">Bank of America FX Platform Case Study</a></li>
