new transition page

--- a/Airline-Case-Study/index.html
+++ b/Airline-Case-Study/index.html
@@ -129,7 +129,7 @@
         </div>
         <div class="related-posts__item__wrapper">
           <a href="/Trunk-Correlated-Practices-Chart/" class="related-posts__item">
-            <div style="background-image: url('/images/default.jpg')" class="related-posts__item__background"></div>
+            <div style="background-image: url('https://paulhammant.com/files/Trunk_Correlated_Practices_transition.png')" class="related-posts__item__background"></div>
             <div class="related-posts__item__overlay"></div><span class="related-posts__item__title">Trunk Correlated Practices Chart</span></a>
         </div>
         <div class="related-posts__item__wrapper">
