--- a/HedgeServ-Innovations/index.html
+++ b/HedgeServ-Innovations/index.html
@@ -146,7 +146,7 @@ the multiple affected server nodes when changed. I'm not sure of the status of t
         </div>
         <div class="related-posts__item__wrapper">
           <a href="/Trunk-Correlated-Practices-Chart/" class="related-posts__item">
-            <div style="background-image: url('/images/default.jpg')" class="related-posts__item__background"></div>
+            <div style="background-image: url('https://paulhammant.com/files/Trunk_Correlated_Practices_transition.png')" class="related-posts__item__background"></div>
             <div class="related-posts__item__overlay"></div><span class="related-posts__item__title">Trunk Correlated Practices Chart</span></a>
         </div>
       </section>
