--- a/BofA-Platform-Case-Study/index.html
+++ b/BofA-Platform-Case-Study/index.html
@@ -134,7 +134,7 @@
       </div>
       <div class="related-posts__item__wrapper">
         <a href="/Trunk-Correlated-Practices-Chart/" class="related-posts__item">
-          <div style="background-image: url('https://paulhammant.com/files/Trunk_Correlated_Practices_transition.png')" class="related-posts__item__background"></div>
+          <div style="background-image: url('/chart_key.png')" class="related-posts__item__background"></div>
           <div class="related-posts__item__overlay"></div><span class="related-posts__item__title">Trunk Correlated Practices Chart</span></a>
       </div>
       <div class="related-posts__item__wrapper">
@@ -154,10 +154,10 @@
           <h3 class="widgets__item__heading">Recent posts</h3>
           <ul class="recent-posts">
             <li class="recent-posts__item"><a href="/Trunk-Correlated-Practices-Chart/">Trunk Correlated Practices Chart</a></li>
+            <li class="recent-posts__item"><a href="/Airline-Case-Study/">Airline Case Study</a></li>
             <li class="recent-posts__item"><a href="/HedgeServ-Innovations/">HedgeServ innovations</a></li>
             <li class="recent-posts__item"><a href="/Build-Radiators-as-a-Service/">Build Radiators as a Service</a></li>
             <li class="recent-posts__item"><a href="/BofA-Platform-Case-Study/">Bank of America FX Platform Case Study</a></li>
-            <li class="recent-posts__item"><a href="/Airline-Case-Study/">Airline Case Study</a></li>
           </ul>
         </div>
         <div class="widgets__item">
