--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                 target="_blank" rel="noopener">Lean Enterprise</a>, and <a href="https://www.amazon.com/DevOps-Handbook-World-Class-Reliability-Organizations/dp/1942788002/" target="_blank" rel="noopener">The DevOps Handbook</a> over the last seven years.</li>
             <li>I <a href="https://paulhammant.com/" target="_blank" rel="noopener">have been blogging</a> about a wide range of software development topics since 2002</li>
           </ul>
-          <p>New York is my base, but I frequently travel to client sites in the USA. I also have clients outside the USA.</p>
+          <p>The United Kingdom is my base, but I travel to clients and work remotely where needed.</p>
           <p>Contacting me by email is best to talk about any work I can do for your company: <a href="mailto:paul@hammant.org?subject=Consulting%20services%20for%20getting%20us%20to%20Trunk-Based%20Development,%20etc." target="_blank" rel="noopener">paul@hammant.org</a>.
-            And sometimes people need to mail me something, in which case the address is: Paul Hammant DevOps,<img style="display: inline; margin: 0px 0px -1.5px 0px; padding-bottom: 0px;" src="2017-09-06_1457.png">, Floor 11, New York, NY 10019.</p>
+            </p>
         </div>
         <div id="sharer" class="sharer">
           <div class="sharer-inner">
