--- a/HedgeServ-Innovations/index.html
+++ b/HedgeServ-Innovations/index.html
@@ -148,7 +148,7 @@ the multiple affected server nodes when changed. I'm not sure of the status of t
         </div>
         <div class="related-posts__item__wrapper">
           <a href="/Trunk-Correlated-Practices-Chart/" class="related-posts__item">
-            <div style="background-image: url('/chart_key.png')" class="related-posts__item__background"></div>
+            <div style="background-image: url('/pdf.png')" class="related-posts__item__background"></div>
             <div class="related-posts__item__overlay"></div><span class="related-posts__item__title">Trunk Correlated Practices Chart</span></a>
         </div>
       </section>
@@ -162,10 +162,10 @@ the multiple affected server nodes when changed. I'm not sure of the status of t
         <div class="widgets__item">
           <h3 class="widgets__item__heading">Recent posts</h3>
           <ul class="recent-posts">
+            <li class="recent-posts__item"><a href="/Trunk-Correlated-Practices-Chart/">Trunk Correlated Practices Chart</a></li>
             <li class="recent-posts__item"><a href="/Airline-Case-Study/">Airline Case Study</a></li>
             <li class="recent-posts__item"><a href="/BofA-Platform-Case-Study/">Big Four bank's FX Platform Case Study</a></li>
             <li class="recent-posts__item"><a href="/Build-Radiators-as-a-Service/">Build Radiators as a Service</a></li>
-            <li class="recent-posts__item"><a href="/Trunk-Correlated-Practices-Chart/">Trunk Correlated Practices Chart</a></li>
             <li class="recent-posts__item"><a href="/HedgeServ-Innovations/">HedgeServ innovations</a></li>
           </ul>
         </div>
